--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scripts/pgclient"
+    "start": "node pgclient"
   },
   "engines": {
     "node": "14.x"
